fix bug collapse

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,13 @@
   justify-content: center;
   font-size: 3rem;
 }
+
+.collapse-icon__container {
+  margin-left: -3%;
+  display: flex;
+  align-items: center;
+}
+
+.ant-menu {
+  width: 100% !important;
+}
